Revert to Java 8 for unfortunate corporate laptop users (#128)
* Revert to Java 8 for unfortunate corporate laptop users

* Apply spotless